# xhumanoid_sdk

./: CONTRIBUTING.md  LICENSE  README.md
1.single_joint_control/: README.md
1.single_joint_control/cpp/single_joint_control/: CMakeLists.txt  package.xml
1.single_joint_control/cpp/single_joint_control/src/: cmd_publisher.cpp
1.single_joint_control/python/: package.xml  setup.cfg  setup.py
1.single_joint_control/python/launch/: run.launch.py
1.single_joint_control/python/single_joint_control/: __init__.py  cmd_publisher.py
10.mic_record_demo/: README.md
10.mic_record_demo/cpp/mic_record_demo/: package.xml
10.mic_record_demo/python/: package.xml
11.camera_display/: README.md
11.camera_display/python/: setup.cfg
11.camera_display/python/camera_display/: camera_display_node.py
12.brainco_hand_touch_display/: README.md
12.brainco_hand_touch_display/python/: setup.cfg
12.brainco_hand_touch_display/python/brainco_hand_touch_display/: touch_display_node.py
12.brainco_hand_touch_display/python/launch/: touch_display.launch.py
2.brainco_hand_gesture_control/: README.md
2.brainco_hand_gesture_control/brainco_hand_gesture_interfaces/: package.xml
2.brainco_hand_gesture_control/brainco_hand_gesture_interfaces/srv/: GestureCommand.srv
2.brainco_hand_gesture_control/cpp/brainco_hand_gesture_control/: CMakeLists.txt
2.brainco_hand_gesture_control/python/: package.xml  setup.cfg
2.brainco_hand_gesture_control/python/brainco_hand_gesture_control/: __init__.py
3.play_text_demo/: README.md
3.play_text_demo/python/: setup.cfg  setup.py
3.play_text_demo/python/launch/: run.launch.py
4.speech_recognition_demo/: README.md
4.speech_recognition_demo/cpp/speech_recognition_demo/: CMakeLists.txt
4.speech_recognition_demo/cpp/speech_recognition_demo/src/: speech_recognition_node.cpp
4.speech_recognition_demo/python/: setup.cfg  setup.py
5.point_cloud_display/: README.md
5.point_cloud_display/python/launch/: point_cloud_display.launch.py
5.point_cloud_display/python/point_cloud_display/: __init__.py  point_cloud_display_node.py
6.imu_display/: README.md
6.imu_display/cpp/imu_display/: package.xml
6.imu_display/cpp/imu_display/launch/: imu_display.launch.py
6.imu_display/python/: setup.py
6.imu_display/python/imu_display/: __init__.py  imu_display_node.py  imu_display_node_uv.sh
7.gps_data_display/: README.md
7.gps_data_display/python/: package.xml  setup.cfg  setup.py
8.camera_6v_display/: README.md
8.camera_6v_display/python/: package.xml  setup.cfg
8.camera_6v_display/python/launch/: camera_6v_display.launch.py
9.speaker_play_demo/: README.md
9.speaker_play_demo/cpp/speaker_play_demo/: CMakeLists.txt
9.speaker_play_demo/cpp/speaker_play_demo/src/: speaker_play_demo_node.cpp
9.speaker_play_demo/python/: setup.cfg  setup.py
9.speaker_play_demo/python/launch/: speaker_play_demo.launch.py
brainco_hand_gesture_control/: README.md
brainco_hand_gesture_control/brainco_hand_gesture_interfaces/: CMakeLists.txt
brainco_hand_gesture_control/cpp/brainco_hand_gesture_control/: package.xml
brainco_hand_gesture_control/cpp/brainco_hand_gesture_control/config/: gesture_config.yaml
brainco_hand_gesture_control/cpp/brainco_hand_gesture_control/launch/: hand_gesture_control.launch.py
brainco_hand_gesture_control/cpp/brainco_hand_gesture_control/src/: hand_gesture_control.cpp
brainco_hand_gesture_control/python/: setup.py
brainco_hand_gesture_control/python/brainco_hand_gesture_control/: hand_gesture_control.py
brainco_hand_gesture_control/python/launch/: hand_gesture_control.launch.py
brainco_hand_touch_display/: README.md
brainco_hand_touch_display/cpp/brainco_hand_touch_display/: CMakeLists.txt  package.xml
brainco_hand_touch_display/cpp/brainco_hand_touch_display/launch/: touch_display.launch.py
brainco_hand_touch_display/python/: package.xml  setup.py
camera_6v_display/: README.md
camera_6v_display/cpp/camera_6v_display/: CMakeLists.txt  package.xml
camera_6v_display/cpp/camera_6v_display/launch/: camera_6v_display.launch.py
camera_6v_display/python/: setup.py
camera_6v_display/python/camera_6v_display/: __init__.py  camera_6v_display_node.py
camera_display/: README.md
camera_display/cpp/camera_display/: CMakeLists.txt  package.xml
camera_display/cpp/camera_display/launch/: camera_display.launch.py
camera_display/cpp/camera_display/src/: camera_display_node.cpp
camera_display/python/: package.xml  setup.py
camera_display/python/launch/: camera_display.launch.py
gps_data_display/: README.md
gps_data_display/cpp/gps_data_display/: CMakeLists.txt  package.xml
gps_data_display/python/gps_data_display/: __init__.py  (+1 more)
imu_display/: README.md
imu_display/cpp/imu_display/: CMakeLists.txt
imu_display/cpp/imu_display/scripts/: imu_plot_generator.py
imu_display/cpp/imu_display/src/: imu_display_node.cpp
imu_display/python/: package.xml  setup.cfg
mic_record_demo/: README.md
mic_record_demo/cpp/mic_record_demo/: CMakeLists.txt
mic_record_demo/cpp/mic_record_demo/launch/: mic_record_demo.launch.py
mic_record_demo/python/: setup.cfg  setup.py
play_text_demo/: README.md
play_text_demo/cpp/play_text_demo/: CMakeLists.txt  package.xml
play_text_demo/cpp/play_text_demo/launch/: run.launch.py
play_text_demo/cpp/play_text_demo/src/: play_text_node.cpp
play_text_demo/python/: package.xml
point_cloud_display/: README.md
point_cloud_display/cpp/point_cloud_display/: CMakeLists.txt  package.xml
point_cloud_display/cpp/point_cloud_display/launch/: point_cloud_display.launch.py
point_cloud_display/python/: package.xml  setup.cfg  setup.py
single_joint_control/: README.md
speaker_play_demo/: README.md
speaker_play_demo/python/: package.xml
speaker_play_demo/python/speaker_play_demo/: __init__.py  speaker_play_demo_node.py
speech_recognition_demo/: README.md
speech_recognition_demo/cpp/speech_recognition_demo/: package.xml
speech_recognition_demo/cpp/speech_recognition_demo/launch/: run.launch.py
speech_recognition_demo/python/: package.xml
(+21 files in other folders)
