<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>speaker_play_demo_py</name>
  <version>0.0.1</version>
  <description>ROS2 demo node for audio playback via TTS service (Python)</description>
  <maintainer email="ryan.liu@x-humanoid.com">ryan</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>interaction_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>