<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>single_joint_control_cpp</name>
  <version>0.0.0</version>
  <description>Single joint motor control example using ROS2 topic publishing (C++)</description>
  <maintainer email="ryan.liu@x-humanoid.com">ryan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>ros2_bridge_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>ros2_bridge_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
