<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>play_text_demo_cpp</name>
  <version>0.0.0</version>
  <description>Play text demo using interaction TTS service</description>
  <maintainer email="ryan.liu@x-humanoid.com">ryan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>interaction_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>interaction_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>